--- a/es-systems/sass/blocks/feedback.sass
+++ b/es-systems/sass/blocks/feedback.sass
@@ -1,5 +1,8 @@
 .feedback
     text-align: right
+    display: flex
+    flex-direction: column
+    align-items: flex-end
     &__callback
         font-size: 16px
         font-weight: 700
@@ -9,6 +12,7 @@
         margin-bottom: 16px
         cursor: pointer
         // opacity: 0.4
+        width: fit-content
         border-bottom: 1px solid rgba(41, 49, 56, .4)
     &__email
         font-family: 'Roboto'
