--- a/sortmet/sass/blocks/catalog-section.sass
+++ b/sortmet/sass/blocks/catalog-section.sass
@@ -93,6 +93,7 @@
         @media (max-width: 1023px)
             display: block
     &__tags-second
+        margin-top: 20px
         .tags-second__slider
             @media (max-width: 767px)
                 display: none
