--- a/sortmet/sass/blocks/title.sass
+++ b/sortmet/sass/blocks/title.sass
@@ -10,6 +10,17 @@
     @media (max-width: 767px)
         font-size: 22px
         line-height: 29px
+    &_with-content
+        font-weight: inherit
+        font-size: inherit
+        line-height: inherit
+        display: flex
+        justify-content: space-between
+        align-items: center
+        span
+            font-weight: 700
+            font-size: 1.625rem
+            line-height: 30px
     &__text
         padding-bottom: 20px
         font-size: 16px
