--- a/sortmet/sass/main.sass
+++ b/sortmet/sass/main.sass
@@ -26,6 +26,7 @@
 @import blocks/deferment
 @import blocks/categories
 @import blocks/form
+@import blocks/subscribe-form
 @import blocks/labels
 @import blocks/characteristics
 @import blocks/actions
@@ -36,6 +37,8 @@
 @import blocks/slider-pagination
 @import blocks/catalog-slider
 @import blocks/advantages
+@import blocks/payment
+@import blocks/text
 @import blocks/services
 @import blocks/how-buy
 @import blocks/partners
@@ -74,3 +77,13 @@
 @import blocks/view
 @import blocks/filters
 @import blocks/filter-icon
+@import blocks/catalog-element
+@import blocks/element-slider
+@import blocks/variants
+@import blocks/characteristics-second
+@import blocks/unit
+@import blocks/quantity
+@import blocks/delivery-date
+@import blocks/delivery
+@import blocks/reviews-second
+@import blocks/navigation
